--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
   <header class="navbar">
     <div class="logo">Coffe Shop</div>
     <div class="menu">
-      <button class="btn small">☕ Café</button>
-      <button class="btn small">🛒 Carrinho</button>
+      <button class="btn small"><img src="icons/map-pin-verde.png" alt="Localização"> Cedro, CE</button>
+      <button class="btn small"><img src="icons/shopping-cart-verde.png" alt="Carrinho de Compras"></button>
     </div>
   </header>
 
@@ -24,12 +24,27 @@
       <h1>Encontre o café perfeito<br>para qualquer hora do dia</h1>
       <p>Com a Coffe Shop você tem acesso aos mais variados tipos<br>de cafés do mercado.</p>
 
-      <ul>
-        <li><img src="icons/shopping-cart.svg" alt="Carrinho de Compras">Compra simples e segura</li>
-        <li><img src="icons/shopping-cart.svg" alt="Carrinho de Compras">Entrega rápida e rastreada</li>
-        <li><img src="icons/shopping-cart.svg" alt="Carrinho de Compras">Embalagem mantém o café intacto</li>
-        <li><img src="icons/shopping-cart.svg" alt="Carrinho de Compras">O café chega fresquinho até você</li>
-      </ul>
+      <!-- Bloco dos ícones e textos -->
+      <div class="beneficios">
+        <ul>
+          <li>
+            <img src="icons/shopping-cart-fill.png" alt="Carrinho">
+            <span>Compra simples e segura</span>
+          </li>
+          <li>
+            <img src="icons/package-fill.png" alt="Embalagem">
+            <span>Embalagem mantém o café intacto</span>
+          </li>
+          <li>
+            <img src="icons/clock-fill.png" alt="Relógio">
+            <span>Entrega rápida e rastreada</span>
+          </li>
+          <li>
+            <img src="icons/coffee-fill.png" alt="Café">
+            <span>O café chega fresquinho até você</span>
+          </li>
+        </ul>
+      </div>
 
       <div class="buttons">
         <button class="btn primary">Comprar</button>
@@ -38,7 +53,7 @@
     </div>
 
     <div class="hero-img">
-      <img src="coffee-cup.png" alt="Copo de café">
+      <img src="imgs/coffe-cup.png" alt="Copo de café">
     </div>
   </section>
 
@@ -181,15 +196,16 @@
     </div>
   </section>
 
-  <!-- ===== Footer ===== -->
   <footer>
     <div class="footer-left">
       <strong>Coffe Shop</strong>
-      <p>Com a Coffe Shop você tem acesso aos melhores cafés do mercado.</p>
+      <p>Com o Coffe Shop você tem acesso <br>
+        aos mais variados tipos de cafés do <br>
+         mercado.</p>
     </div>
     <div class="footer-right">
       <p>Todos os direitos reservados - 2025 - Coffe Shop</p>
-      <a href="#topo">Voltar ao topo ↑</a>
+      <a href="index.html">Voltar ao topo ↑</a>
     </div>
   </footer>
 
