--- a/index.html
+++ b/index.html
@@ -1,15 +1,18 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Coffe Shop</title>
   <link rel="stylesheet" href="style.css">
-  <link href="https://fonts.googleapis.com/css2?family=Baloo+2:wght@700;800&family=Inter:wght@400;700&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Baloo+2:wght@700;800&family=Inter:wght@400;700&display=swap"
+    rel="stylesheet">
 </head>
+
 <body>
 
-  <!-- ===== Header ===== -->
+  <!-- Header -->
   <header class="navbar">
     <div class="logo">Coffe Shop</div>
     <div class="menu">
@@ -18,31 +21,18 @@
     </div>
   </header>
 
-  <!-- ===== Hero ===== -->
+  <!-- Hero -->
   <section class="hero">
     <div class="hero-text">
       <h1>Encontre o café perfeito<br>para qualquer hora do dia</h1>
       <p>Com a Coffe Shop você tem acesso aos mais variados tipos<br>de cafés do mercado.</p>
 
-      <!-- Bloco dos ícones e textos -->
       <div class="beneficios">
         <ul>
-          <li>
-            <img src="icons/shopping-cart-fill.png" alt="Carrinho">
-            <span>Compra simples e segura</span>
-          </li>
-          <li>
-            <img src="icons/package-fill.png" alt="Embalagem">
-            <span>Embalagem mantém o café intacto</span>
-          </li>
-          <li>
-            <img src="icons/clock-fill.png" alt="Relógio">
-            <span>Entrega rápida e rastreada</span>
-          </li>
-          <li>
-            <img src="icons/coffee-fill.png" alt="Café">
-            <span>O café chega fresquinho até você</span>
-          </li>
+          <li><img src="icons/shopping-cart-fill.png"><span>Compra simples e segura</span></li>
+          <li><img src="icons/package-fill.png"><span>Embalagem mantém o café intacto</span></li>
+          <li><img src="icons/clock-fill.png"><span>Entrega rápida e rastreada</span></li>
+          <li><img src="icons/coffee-fill.png"><span>O café chega fresquinho até você</span></li>
         </ul>
       </div>
 
@@ -57,20 +47,27 @@
     </div>
   </section>
 
-  <!-- ===== Produtos ===== -->
+  <!-- Produtos -->
   <section class="produtos">
     <h2>Nossos cafés</h2>
 
     <div class="grid-produtos">
 
-      <!-- Linha 1 -->
+      <!-- Cards Produtos -->
       <div class="card">
         <img src="imgs/tradicional.png" alt="Expresso Tradicional">
         <span class="tag">Tradicional</span>
         <h3>Expresso Tradicional</h3>
         <p>O tradicional café feito com água quente e grãos moídos</p>
-        <div class="preco">R$ 9,90</div>
-        <button class="btn small">🛒</button>
+        <div class="footer-card">
+          <div class="preco">R$ <span>9,90</span></div>
+          <div class="actions">
+            <button class="qty-btn">−</button>
+            <span class="qty">1</span>
+            <button class="qty-btn">+</button>
+            <button class="cart-btn"><img src="icons/shopping-cart-fill.png"></button>
+          </div>
+        </div>
       </div>
 
       <div class="card">
@@ -78,8 +75,15 @@
         <span class="tag">Tradicional</span>
         <h3>Expresso Americano</h3>
         <p>Expresso diluído, menos intenso que o tradicional</p>
-        <div class="preco">R$ 9,90</div>
-        <button class="btn small">🛒</button>
+        <div class="footer-card">
+          <div class="preco">R$ <span>9,90</span></div>
+          <div class="actions">
+            <button class="qty-btn">−</button>
+            <span class="qty">1</span>
+            <button class="qty-btn">+</button>
+            <button class="cart-btn"><img src="icons/shopping-cart-fill.png"></button>
+          </div>
+        </div>
       </div>
 
       <div class="card">
@@ -87,82 +91,151 @@
         <span class="tag">Tradicional</span>
         <h3>Expresso Cremoso</h3>
         <p>Café expresso tradicional com espuma cremosa</p>
-        <div class="preco">R$ 9,90</div>
-        <button class="btn small">🛒</button>
+        <div class="footer-card">
+          <div class="preco">R$ <span>9,90</span></div>
+          <div class="actions">
+            <button class="qty-btn">−</button>
+            <span class="qty">1</span>
+            <button class="qty-btn">+</button>
+            <button class="cart-btn"><img src="icons/shopping-cart-fill.png"></button>
+          </div>
+        </div>
       </div>
 
       <div class="card">
         <img src="imgs/gelado.png" alt="Expresso Gelado">
-        <span class="tag">Tradicional | Gelado</span>
+        <span class="tag">Tradicional</span>
+        <span class="tag">Gelado</span>
         <h3>Expresso Gelado</h3>
         <p>Bebida preparada com café expresso e cubos de gelo</p>
-        <div class="preco">R$ 9,90</div>
-        <button class="btn small">🛒</button>
+        <div class="footer-card">
+          <div class="preco">R$ <span>9,90</span></div>
+          <div class="actions">
+            <button class="qty-btn">−</button>
+            <span class="qty">1</span>
+            <button class="qty-btn">+</button>
+            <button class="cart-btn"><img src="icons/shopping-cart-fill.png"></button>
+          </div>
+        </div>
       </div>
 
-      <!-- Linha 2 -->
       <div class="card">
         <img src="imgs/cafe-leite.png" alt="Café com Leite">
-        <span class="tag">Tradicional | com Leite</span>
+        <span class="tag">Tradicional</span>
+        <span class="tag">Com Leite</span>
         <h3>Café com Leite</h3>
         <p>Meio a meio de expresso tradicional com leite vaporizado</p>
-        <div class="preco">R$ 9,90</div>
-        <button class="btn small">🛒</button>
+        <div class="footer-card">
+          <div class="preco">R$ <span>9,90</span></div>
+          <div class="actions">
+            <button class="qty-btn">−</button>
+            <span class="qty">1</span>
+            <button class="qty-btn">+</button>
+            <button class="cart-btn"><img src="icons/shopping-cart-fill.png"></button>
+          </div>
+        </div>
       </div>
 
       <div class="card">
         <img src="imgs/latte.png" alt="Latte">
-        <span class="tag">Tradicional | com Leite</span>
+        <span class="tag">Tradicional</span>
+        <span class="tag">Com Leite</span>
         <h3>Latte</h3>
         <p>Uma dose de café expresso com o dobro de leite e espuma cremosa</p>
-        <div class="preco">R$ 9,90</div>
-        <button class="btn small">🛒</button>
+        <div class="footer-card">
+          <div class="preco">R$ <span>9,90</span></div>
+          <div class="actions">
+            <button class="qty-btn">−</button>
+            <span class="qty">1</span>
+            <button class="qty-btn">+</button>
+            <button class="cart-btn"><img src="icons/shopping-cart-fill.png"></button>
+          </div>
+        </div>
       </div>
 
       <div class="card">
         <img src="imgs/capuccino.png" alt="Capuccino">
-        <span class="tag">Tradicional | com Leite</span>
+        <span class="tag">Tradicional</span>
+        <span class="tag">Com Leite</span>
         <h3>Capuccino</h3>
         <p>Bebida com canela feita de doses iguais de café, leite e espuma</p>
-        <div class="preco">R$ 9,90</div>
-        <button class="btn small">🛒</button>
+        <div class="footer-card">
+          <div class="preco">R$ <span>9,90</span></div>
+          <div class="actions">
+            <button class="qty-btn">−</button>
+            <span class="qty">1</span>
+            <button class="qty-btn">+</button>
+            <button class="cart-btn"><img src="icons/shopping-cart-fill.png"></button>
+          </div>
+        </div>
       </div>
 
       <div class="card">
         <img src="imgs/macchiato.png" alt="Macchiato">
-        <span class="tag">Tradicional | com Leite</span>
+        <span class="tag">Tradicional</span>
+        <span class="tag">Com Leite</span>
         <h3>Macchiato</h3>
         <p>Café expresso misturado com um pouco de leite quente e espuma</p>
-        <div class="preco">R$ 9,90</div>
-        <button class="btn small">🛒</button>
+        <div class="footer-card">
+          <div class="preco">R$ <span>9,90</span></div>
+          <div class="actions">
+            <button class="qty-btn">−</button>
+            <span class="qty">1</span>
+            <button class="qty-btn">+</button>
+            <button class="cart-btn"><img src="icons/shopping-cart-fill.png"></button>
+          </div>
+        </div>
       </div>
 
-      <!-- Linha 3 -->
       <div class="card">
         <img src="imgs/mocaccino.png" alt="Mocaccino">
-        <span class="tag">Tradicional | com Leite</span>
+        <span class="tag">Tradicional</span>
         <h3>Mocaccino</h3>
-        <p>Café expresso com calda de chocolate, leite e espuma cremosa</p>
-        <div class="preco">R$ 9,90</div>
-        <button class="btn small">🛒</button>
+        <p>Café expresso com calda de chocolate, pouco leite e espuma</p>
+        <div class="footer-card">
+          <div class="preco">R$ <span>9,90</span></div>
+          <div class="actions">
+            <button class="qty-btn">−</button>
+            <span class="qty">1</span>
+            <button class="qty-btn">+</button>
+            <button class="cart-btn"><img src="icons/shopping-cart-fill.png"></button>
+          </div>
+        </div>
       </div>
 
       <div class="card">
         <img src="imgs/chocolate-quente.png" alt="Chocolate Quente">
-        <span class="tag">Especial | com Leite</span>
+        <span class="tag">Especial</span>
+        <span class="tag">Com Leite</span>
         <h3>Chocolate Quente</h3>
         <p>Bebida feita com chocolate dissolvido no leite quente e café</p>
-        <div class="preco">R$ 9,90</div>
-        <button class="btn small">🛒</button>
+        <div class="footer-card">
+          <div class="preco">R$ <span>9,90</span></div>
+          <div class="actions">
+            <button class="qty-btn">−</button>
+            <span class="qty">1</span>
+            <button class="qty-btn">+</button>
+            <button class="cart-btn"><img src="icons/shopping-cart-fill.png"></button>
+          </div>
+        </div>
       </div>
-
+      
       <div class="card">
         <img src="imgs/cubano.png" alt="Cubano">
-        <span class="tag">Especial | Alcoólico | Gelado</span>
+        <span class="tag">Especial</span>
+        <span class="tag">Alcoólico</span>
+        <span class="tag">Gelado</span>
         <h3>Cubano</h3>
         <p>Drink gelado de café expresso com rum, creme de leite e hortelã</p>
-        <div class="preco">R$ 9,90</div>
-        <button class="btn small">🛒</button>
+        <div class="footer-card">
+          <div class="preco">R$ <span>9,90</span></div>
+          <div class="actions">
+            <button class="qty-btn">−</button>
+            <span class="qty">1</span>
+            <button class="qty-btn">+</button>
+            <button class="cart-btn"><img src="icons/shopping-cart-fill.png"></button>
+          </div>
+        </div>
       </div>
 
       <div class="card">
@@ -170,44 +243,76 @@
         <span class="tag">Especial</span>
         <h3>Havaiano</h3>
         <p>Bebida adocicada preparada com café e leite de coco</p>
-        <div class="preco">R$ 9,90</div>
-        <button class="btn small">🛒</button>
+        <div class="footer-card">
+          <div class="preco">R$ <span>9,90</span></div>
+          <div class="actions">
+            <button class="qty-btn">−</button>
+            <span class="qty">1</span>
+            <button class="qty-btn">+</button>
+            <button class="cart-btn"><img src="icons/shopping-cart-fill.png"></button>
+          </div>
+        </div>
       </div>
 
-      <!-- Linha 4 -->
+
       <div class="card">
         <img src="imgs/arabe.png" alt="Árabe">
         <span class="tag">Especial</span>
         <h3>Árabe</h3>
         <p>Bebida preparada com grãos de café árabe e especiarias</p>
-        <div class="preco">R$ 9,90</div>
-        <button class="btn small">🛒</button>
+        <div class="footer-card">
+          <div class="preco">R$ <span>9,90</span></div>
+          <div class="actions">
+            <button class="qty-btn">−</button>
+            <span class="qty">1</span>
+            <button class="qty-btn">+</button>
+            <button class="cart-btn"><img src="icons/shopping-cart-fill.png"></button>
+          </div>
+        </div>
       </div>
 
       <div class="card">
         <img src="imgs/irlandes.png" alt="Irlandês">
-        <span class="tag">Especial | Alcoólico</span>
+        <span class="tag">Tradicional</span>
         <h3>Irlandês</h3>
         <p>Bebida a base de café, uísque irlandês, açúcar e chantilly</p>
-        <div class="preco">R$ 9,90</div>
-        <button class="btn small">🛒</button>
+        <div class="footer-card">
+          <div class="preco">R$ <span>9,90</span></div>
+          <div class="actions">
+            <button class="qty-btn">−</button>
+            <span class="qty">1</span>
+            <button class="qty-btn">+</button>
+            <button class="cart-btn"><img src="icons/shopping-cart-fill.png"></button>
+          </div>
+        </div>
       </div>
 
     </div>
   </section>
 
-  <footer>
-    <div class="footer-left">
-      <strong>Coffe Shop</strong>
-      <p>Com o Coffe Shop você tem acesso <br>
-        aos mais variados tipos de cafés do <br>
-         mercado.</p>
-    </div>
-    <div class="footer-right">
-      <p>Todos os direitos reservados - 2025 - Coffe Shop</p>
-      <a href="index.html">Voltar ao topo ↑</a>
+  <footer class="footer">
+    <div class="footer-inner">
+      <div class="footer-top">
+        <h3><strong>Coffe shop</strong></h3>
+        <p>Com o Coffe Shop você tem acesso <br>
+          aos mais variados tipos de cafés do <br>
+          mercado.</p>
+      </div>
+
+      <!-- linha -->
+      <div class="divider" aria-hidden="true"></div>
+
+      <div class="footer-bottom">
+        <p>Todos os direitos reservados 2025 – <strong>Coffe Shop</strong></p>
+
+        <div class="back-wrap">
+          <span class="back-text">Voltar ao topo</span>
+          <a href="#" class="back-to-top">↑</a>
+        </div>
+      </div>
     </div>
   </footer>
 
 </body>
+
 </html>
